adding License Owner endpoint
