# api/internal/models/betav0/license.go
@@ -5,6 +5,7 @@ type License struct {
 	PolicyID     string `json:"policyId"`
 	LicensorIpId string `json:"licensorIpId"`
 	Transferable bool   `json:"transferable"`
+	Amount       string `json:"amount"`
 
 	BlockNumber    string `json:"blockNumber"`
 	BlockTimestamp string `json:"blockTimestamp"`
@@ -37,6 +38,7 @@ type LicenseQueryOptions struct {
 	Where struct {
 		PolicyId      string `json:"policyId"`
 		LicensorIpdId string `json:"licensorIpdId"`
+		Transferable  string `json:"transferable"`
 	} `json:"where"`
 	OrderBy        string `json:"orderBy"`
 	OrderDirection string `json:"orderDirection"`
